[gd_scene load_steps=18 format=3 uid="uid://c2h065masirls"]

[ext_resource type="Texture2D" uid="uid://cpkxox6rhgnhy" path="res://assets/gui/title-page/menu_back.png" id="1_6sjwo"]
[ext_resource type="Script" path="res://scripts/gui/title_screen.gd" id="1_nykqs"]
[ext_resource type="Texture2D" uid="uid://duyy888fudd3o" path="res://assets/gui/title-page/menu_2.png" id="2_fg0nj"]
[ext_resource type="Texture2D" uid="uid://gfys25n58ujy" path="res://assets/gui/title-page/menu_floor.png" id="3_wnqoq"]
[ext_resource type="Texture2D" uid="uid://bkyq376ru8x0" path="res://assets/gui/title-page/Dead_Tree.png" id="4_bb7v2"]
[ext_resource type="Texture2D" uid="uid://cpyhmlujx5gvy" path="res://assets/gui/title-page/STATIC_Fog.png" id="5_pkcux"]
[ext_resource type="Texture2D" uid="uid://c1pau6ta8ekix" path="res://assets/gui/title-page/Lightbringer_Logo_no_background.png" id="6_vgy8t"]
[ext_resource type="Texture2D" uid="uid://b8qsksjj5hdqt" path="res://assets/gui/title-page/begin.png" id="7_ex3nk"]
[ext_resource type="Texture2D" uid="uid://dhtnkpcscgceb" path="res://assets/gui/title-page/left_arrow.png" id="8_48muy"]
[ext_resource type="Texture2D" uid="uid://duawlphkxmmah" path="res://assets/gui/title-page/right_arrow.png" id="9_f6faj"]

[sub_resource type="Animation" id="Animation_1nxl8"]
resource_name = "show_arrows"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftArrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightArrow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tysy5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftArrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightArrow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_judss"]
resource_name = "hide_arrows"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftArrow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightArrow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kefic"]
resource_name = "lantern_on"
length = 0.9
loop_mode = 1

[sub_resource type="Animation" id="Animation_i1lpg"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2qbe"]
_data = {
"RESET": SubResource("Animation_tysy5"),
"fade": SubResource("Animation_i1lpg"),
"hide_arrows": SubResource("Animation_judss"),
"lantern_on": SubResource("Animation_kefic"),
"show_arrows": SubResource("Animation_1nxl8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0votd"]
size = Vector2(333, 52)

[node name="TitleScreen" type="Control" node_paths=PackedStringArray("begin_button", "animation_player")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_top = 536.0
offset_right = 960.0
offset_bottom = 536.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nykqs")
begin_button = NodePath("BeginText")
animation_player = NodePath("AnimationPlayer")

[node name="MenuBack" type="Sprite2D" parent="."]
texture = ExtResource("1_6sjwo")

[node name="MenuFront" type="Sprite2D" parent="."]
texture = ExtResource("2_fg0nj")

[node name="MenuFloor" type="Sprite2D" parent="."]
position = Vector2(0, 464)
texture = ExtResource("3_wnqoq")

[node name="Tree" type="Sprite2D" parent="."]
position = Vector2(-638, -58)
texture = ExtResource("4_bb7v2")

[node name="Fog" type="Sprite2D" parent="."]
texture = ExtResource("5_pkcux")

[node name="Title" type="Sprite2D" parent="."]
texture = ExtResource("6_vgy8t")

[node name="BeginText" type="Sprite2D" parent="."]
position = Vector2(8, 216)
texture = ExtResource("7_ex3nk")

[node name="LeftArrow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-120, 216)
texture = ExtResource("8_48muy")

[node name="RightArrow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(136, 216)
texture = ExtResource("9_f6faj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y2qbe")
}

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -960.0
offset_top = -536.0
offset_right = 952.0
offset_bottom = 544.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="BeginButtonArea" type="Area2D" parent="."]
position = Vector2(8, 216)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeginButtonArea"]
position = Vector2(2.5, -2)
shape = SubResource("RectangleShape2D_0votd")

[connection signal="input_event" from="BeginButtonArea" to="." method="_on_begin_button_area_input_event"]
[connection signal="mouse_entered" from="BeginButtonArea" to="." method="_on_begin_button_area_mouse_entered"]
[connection signal="mouse_exited" from="BeginButtonArea" to="." method="_on_begin_button_area_mouse_exited"]
